--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
   top: 0; left: 0;
   width: 100%;
   height: 100%;
-  background: url('hero-bg.jpg') no-repeat center center / cover;
+  background: url('hero-bg.jpg.png') no-repeat center center / cover;
   z-index: 0;
   opacity: 0.85;
 }
