--- a/style.css
+++ b/style.css
@@ -149,3 +149,16 @@ footer {
   margin-right: auto; /* Push nav to the right */
   width: 150px; /* Maintain logo size */
 }
+
+.subpage header {
+  justify-content: flex-start;
+  gap: 2rem;
+}
+
+.subpage header .logo {
+  width: 150px;
+  flex-shrink: 0;
+  flex-grow: 0;
+  margin-right: auto;
+  height: auto;
+}
